RE_layer_load_from_file don't support EXR multilayer format #109048

Closed
opened 2023-06-16 10:28:47 +02:00 by Pedro A. · 0 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-14 20:49, hash: 4be143193de6
Worked: (newest version of Blender that worked as expected)

Short description of error
'load_from_file()' return a 'IMB_ibImageFromMemory: unknown file-format' error, when I try to load a render generated in EXR multilayer format for a experimental render engine addon. To be sure that the error was not due to the render format used by the addon, I generated a render with Cycles and save the result in the same EXR multilayer format. Next, I modified the sample render engine included in the Blender API to load that file, getting the same error message.

Error: can't process EXR multilayer file
IMB_ibImageFromMemory: unknown file-format (c:/tmp/cycles/layer.exr)
Traceback (most recent call last):
  File "C:\tmp\cycles\exr_layer.blend\custom_engine.py", line 40, in render
RuntimeError: Error: RE_layer_load_from_file: failed to load 'c:/tmp/cycles/layer.exr'

The second included file, generated by Blender, in normal EXR format, is loaded without any errors.

Exact steps for others to reproduce the error
Open the attached file with the Blender 4.0 alpha version (also gives error with previous versions)
Modify the path into the script to load the included 'layer.exr' file
Check 'Run script'
F12 to render
As control: repeat the steps to load 'nolayer.exr' file

Is this a known limitation? Opening the file in the image editor does not give any errors and all channels are displayed correctly

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-14 20:49, hash: `4be143193de6` Worked: (newest version of Blender that worked as expected) **Short description of error** 'load_from_file()' return a 'IMB_ibImageFromMemory: unknown file-format' error, when I try to load a render generated in EXR multilayer format for a experimental render engine addon. To be sure that the error was not due to the render format used by the addon, I generated a render with Cycles and save the result in the same EXR multilayer format. Next, I modified the sample render engine included in the Blender API to load that file, getting the same error message. ``` Error: can't process EXR multilayer file IMB_ibImageFromMemory: unknown file-format (c:/tmp/cycles/layer.exr) Traceback (most recent call last): File "C:\tmp\cycles\exr_layer.blend\custom_engine.py", line 40, in render RuntimeError: Error: RE_layer_load_from_file: failed to load 'c:/tmp/cycles/layer.exr' ``` The second included file, generated by Blender, in normal EXR format, is loaded without any errors. **Exact steps for others to reproduce the error** Open the attached file with the Blender 4.0 alpha version (also gives error with previous versions) Modify the path into the script to load the included 'layer.exr' file Check 'Run script' F12 to render As control: repeat the steps to load 'nolayer.exr' file Is this a known limitation? Opening the file in the image editor does not give any errors and all channels are displayed correctly
Pedro A. added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2023-06-16 10:28:48 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-06-16 19:11:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109048
No description provided.