Fix #109048: RenderLayer.load_from_file does not support multilayer EXR

This was never implemented, only for the entire RenderResult.