source/blender/render/intern/render_result.h
@@ -20,6 +20,7 @@ struct Render;
 struct RenderData;
 struct RenderLayer;
 struct RenderResult;
+struct ReportList;
 struct rcti;
 
 #ifdef __cplusplus
@@ -94,9 +95,10 @@ struct RenderPass *render_layer_add_pass(struct RenderResult *rr,
 /**
  * Called for reading temp files, and for external engines.
  */
-int render_result_exr_file_read_path(struct RenderResult *rr,
-                                     struct RenderLayer *rl_single,
-                                     const char *filepath);
+bool render_result_exr_file_read_path(struct RenderResult *rr,
+                                      struct RenderLayer *rl_single,
+                                      struct ReportList *reports,
+                                      const char *filepath);
 
 /* EXR cache */
 
